<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient1"
        android:clickable="false"
        android:focusable="true"
        android:orientation="vertical"
        android:padding="10sp">

        <TextView
            android:id="@+id/titleTV"
            android:layout_width="match_parent"
            android:layout_height="225sp"
            android:layout_gravity="center"
            android:layout_marginBottom="20sp"
            android:background="@drawable/roundcornersdark"
            android:fontFamily="@font/aldrich"
            android:lineSpacingExtra="10sp"
            android:text="@string/titleTV"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorHighlight"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aldrich"
            android:padding="10sp"
            android:text="@string/nameTV"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            tools:text="@string/nameTV" />

        <EditText
            android:id="@+id/namePT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundcornerslarge"
            android:ems="10"
            android:fontFamily="@font/aldrich"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="10sp"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:background="@drawable/roundcornerslarge"
            android:backgroundTint="@color/colorHighlight"
            android:fontFamily="@font/aldrich"
            android:text="@string/startBtn" />

        <TextView
            android:id="@+id/titleTV3"
            android:layout_width="142dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginBottom="50sp"
            android:background="@drawable/ic_launcher_foreground"
            android:fontFamily="@font/aldrich"
            android:lineSpacingExtra="10sp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorHighlight"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>